--- a/css/about.css
+++ b/css/about.css
@@ -204,11 +204,33 @@
 .new-member.highlighted {
     border: 2px solid #198754; /* Dark green border for highlighted new member */
 }
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #2c3e50;
+    color: white;
+}
+
+footer a {
+    color: #1abc9c;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
 
 /* Media Queries for Responsiveness */
 @media (max-width: 768px) {
     .team-part {
         flex-basis: calc(50% - 20px); /* Adjust for smaller screens */
+    }
+    .text-section h2 {
+        font-size: 28px;
+    }
+
+    .text-section p {
+        font-size: 14px;
     }
 
     .image-section {
