--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,21 @@
   animation-name: fade;
   animation-duration: 1.5s;
 }
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #2c3e50;
+  color: white;
+}
+
+footer a {
+  color: #1abc9c;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 
 @keyframes fade {
   from {opacity: .4} 
