--- a/css/header.css
+++ b/css/header.css
@@ -21,6 +21,7 @@ header {
     display: flex;
     justify-content: space-between; /* Space between logo, menu, and share icon */
     align-items: center;
+    z-index: 1000;
 }
 
 .logo {
