--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,4 @@
+/* General Body Styling */
 .bbody {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -5,6 +6,7 @@
     background-color: #2c3e50;
 }
 
+/* Container Styling */
 .container {
     display: flex;
     justify-content: center;
@@ -13,6 +15,7 @@
     flex-direction: column;
 }
 
+/* Box Container */
 .box-container {
     border: 1px solid #ddd;
     border-radius: 15px;
@@ -24,6 +27,7 @@
     margin-bottom: 70px;
 }
 
+/* Content Layout */
 .content {
     display: flex;
     justify-content: space-between;
@@ -32,6 +36,7 @@
     padding: 10px;
 }
 
+/* Image Section */
 .image-section {
     position: relative;
     flex-basis: 40%;
@@ -42,10 +47,11 @@
 .image-section img {
     border-radius: 15px;
     width: 100%;
-    max-width: 500px;
+    max-width: 500px; /* Image size adjusted */
     height: auto;
 }
 
+/* Badge Styling */
 .badge {
     position: absolute;
     bottom: -30px;
@@ -79,6 +85,7 @@
     color: #666666;
 }
 
+/* Text Section */
 .text-section {
     flex-basis: 55%;
     max-width: 600px;
@@ -103,6 +110,7 @@
     margin: 20px 0;
 }
 
+/* Features List */
 .features {
     list-style: none;
     padding: 0;
