--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,3 @@
-/* General Body Styling */
 .bbody {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -6,7 +5,6 @@
     background-color: #2c3e50;
 }
 
-/* Container Styling */
 .container {
     display: flex;
     justify-content: center;
@@ -15,7 +13,6 @@
     flex-direction: column;
 }
 
-/* Box Container */
 .box-container {
     border: 1px solid #ddd;
     border-radius: 15px;
@@ -27,7 +24,6 @@
     margin-bottom: 70px;
 }
 
-/* Content Layout */
 .content {
     display: flex;
     justify-content: space-between;
@@ -36,7 +32,6 @@
     padding: 10px;
 }
 
-/* Image Section */
 .image-section {
     position: relative;
     flex-basis: 40%;
@@ -47,11 +42,10 @@
 .image-section img {
     border-radius: 15px;
     width: 100%;
-    max-width: 500px; /* Image size adjusted */
+    max-width: 500px;
     height: auto;
 }
 
-/* Badge Styling */
 .badge {
     position: absolute;
     bottom: -30px;
@@ -85,7 +79,6 @@
     color: #666666;
 }
 
-/* Text Section */
 .text-section {
     flex-basis: 55%;
     max-width: 600px;
@@ -110,7 +103,6 @@
     margin: 20px 0;
 }
 
-/* Features List */
 .features {
     list-style: none;
     padding: 0;
