--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,7 @@ header nav a {
 }
 
 header nav a.active {
-    background: #1abc9c;
+    background: #2c3e50;
     border-radius: 5px;
 }
 
@@ -89,7 +89,7 @@ header nav a.active {
 }
 
 .contact-form input:focus, .contact-form textarea:focus {
-    border-color: #1abc9c;
+    border-color: #2c3e50;
     outline: none;
     box-shadow: 0 0 5px rgba(26, 188, 156, 0.5);
 }
