--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background: #f9f9f9;
+    background:#2c3e50 ;
 }
 
 .contact-header {
