--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,7 @@ body {
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: #2c3e50; /* Semi-transparent white */
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
     backdrop-filter: blur(10px);
     max-width: 600px;
 }
@@ -67,7 +67,6 @@ body {
     border-color: #2c3e50;
     outline: none;
     box-shadow: #2c3e50;
-}
 }
 
 .contact-form textarea {
