--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #2c3e50;
+    background-color: #30354a;
 }
 
 .container {
