--- a/css/careers.css
+++ b/css/careers.css
@@ -54,3 +54,21 @@ h2 {
 .apply-btn:hover {
     background-color: #34495e;
 }
+footer {
+    background: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+    font-size: 0.9rem;
+}
+footer a {
+    color: #1abc9c;
+    text-decoration: none;
+    z-index: 1; 
+  }
+  
+  footer a:hover {
+    text-decoration: underline;
+    z-index: 1; 
+  }
