--- a/css/cprofile.css
+++ b/css/cprofile.css
@@ -86,6 +86,24 @@ section ul li {
 .download-button:hover {
     background-color: #1abc9c; /* Change color on hover */
 }
+footer {
+    background: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+    font-size: 0.9rem;
+}
+footer a {
+    color: #1abc9c;
+    text-decoration: none;
+    z-index: 1; 
+  }
+  
+  footer a:hover {
+    text-decoration: underline;
+    z-index: 1; 
+  }
 
 /* Media Queries for Responsiveness */
 @media (max-width: 1200px) {
