--- a/css/support.css
+++ b/css/support.css
@@ -111,3 +111,21 @@ body {
             border-radius: 5px;
             font-size: 1rem;
         }
+        footer {
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+            font-size: 0.9rem;
+        }
+        footer a {
+            color: #1abc9c;
+            text-decoration: none;
+            z-index: 1; 
+          }
+          
+          footer a:hover {
+            text-decoration: underline;
+            z-index: 1; 
+          }
