--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,4 +1,4 @@
-body {
+.bbody {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #2c3e50;
@@ -58,13 +58,21 @@ h2 {
 .testimonial .client-name {
     font-weight: bold;
 }
-
 footer {
-    text-align: center;
-    background-color: #333;
+    background: #2c3e50;
     color: white;
-    padding: 10px;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+    font-size: 0.9rem;
 }
+footer a {
+    color: #1abc9c;
+    text-decoration: none;
+    z-index: 1; 
+  }
+  
+  footer a:hover {
+    text-decoration: underline;
+    z-index: 1; 
+  }
