--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .bbody {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Times New Roman', serif;
     margin: 0;
     padding: 0;
     background-color: #315374;
