--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', serif;
     line-height: 1.6;
     color: #333;
     background-color: #f8f9fa;
