--- a/css/t&c.css
+++ b/css/t&c.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', serif;
     line-height: 1.6;
     background-color: #f4f4f4;
     margin: 0;
