--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,5 +1,5 @@
 .bbody {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', serif;
     line-height: 1.6;
     background-color: #315374;
     margin: 0;
